--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,3 +9,65 @@ header .line {
     background-color: #117050;
     height: 10px;
 }
+
+.container {
+    max-width: 1140px;
+    margin: auto;
+}
+
+/* */
+.header--area {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.header--left img {
+    width: 64px;
+    height: 64px;
+}
+
+.header--right {
+    display: flex;
+    align-items: center;
+}
+
+.header--search form {
+    display: flex;
+}
+
+.header--search input {
+    font-size: 16px;
+    padding: 9px 15px;
+    border: 1px solid #999999;
+    outline: 0;
+    /*remove effect*/
+    width: 100%;
+    max-width: 250px;
+}
+
+.header--search button {
+    border: 0;
+    background: transparent;
+    margin-left: -30px;
+    cursor: pointer;
+}
+
+.header--search button img {
+    width: 16px;
+    height: 16px;
+}
+
+/*menu header*/
+
+
+.header--menu {
+    margin-left: 70px;
+    cursor: pointer;
+}
+
+.header--menu img {
+    height: 24px;
+    width: 24px;
+}
