--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Oswald:wght@400;700&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
@@ -70,4 +76,39 @@ header .line {
 .header--menu img {
     height: 24px;
     width: 24px;
+}
+
+/*main conten*/
+section {
+    margin-top: 90px;
+}
+
+.banner {
+    background-image: url('../Images/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
+
+.banner h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 100px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+.banner--images {
+    margin-top: 60px;
+}
+
+/*adjust images drinks*/
+.banner--images img {
+    height: 148px;
+    width: 148px;
+    border: 4px solid #117050;
+    border-radius: 50%;
+    margin-right: 30px;
 }
