--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,6 +16,49 @@ header .line {
     height: 10px;
 }
 
+/*default text border tag*/
+.bar {
+    background-color: #006341;
+    width: 168px;
+    height: 22px;
+
+}
+
+/*button default*/
+.button {
+    display: inline-block;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    text-decoration: none;
+    border-radius: 3px;
+    color: #454545;
+}
+
+.button:hover {
+    color: #fff;
+    background-color: #454545;
+
+}
+
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 100px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    margin-top: 0;
+    line-height: 45px;
+    margin: 20px, 0;
+}
+
+/*base 1720-720 style*/
 .container {
     max-width: 1140px;
     margin: auto;
@@ -79,26 +122,17 @@ header .line {
 }
 
 /*main conten*/
-section {
-    margin-top: 90px;
-}
+
 
 .banner {
     background-image: url('../Images/bg.jpg');
     background-position: center;
     background-size: cover;
     padding-top: 90px;
-    padding-bottom: 90px;
+    padding-bottom: 350px;
 }
 
-.banner h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 90px;
-    font-weight: bold;
-    line-height: 100px;
-    margin: 0;
-    margin-bottom: 30px;
-}
+
 
 .banner--images {
     margin-top: 60px;
@@ -111,4 +145,85 @@ section {
     border: 4px solid #117050;
     border-radius: 50%;
     margin-right: 30px;
+}
+
+/*Area1 - GRID*/
+.area1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area1--content {
+
+    padding: 80px;
+}
+
+.area1--quote {
+    margin-bottom: 30px;
+}
+
+.area1--text {
+    line-height: 25px;
+}
+
+.area1--button {
+    padding-top: 10%;
+}
+
+.area1--img1 {
+    background-color: green;
+    height: 500px;
+    background-image: url('../Images/f2.jpg');
+    background-position: cover;
+    background-size: cover;
+    align-items: center;
+}
+
+.area1--img2 {
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    background-image: url('../Images/f1.jpg');
+    background-position: cover;
+    background-size: cover;
+
+}
+
+
+
+
+.area2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area2--content {
+
+    padding: 80px;
+}
+
+.area2--text {
+    line-height: 25px;
+}
+
+.area2--button {
+    padding-top: 7%;
+}
+
+.area2--img1 {
+    background-color: green;
+    height: 600px;
+    background-image: url('../Images/f4.jpg');
+    background-position: cover;
+    background-size: cover;
+    align-items: center;
+}
+
+.area2--img2 {
+    text-align: center;
+    grid-column: 1/2;
+    grid-row: 1/4;
+    background-image: url('../Images/f3.jpg');
+    background-position: cover;
+    background-size: cover;
 }
