--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -25,6 +25,7 @@ header .line {
     background-color: #006341;
     width: 168px;
     height: 22px;
+    margin-bottom: 20px;
 
 }
 
@@ -179,7 +180,7 @@ h2 {
     background-color: green;
     height: 500px;
     background-image: url('../Images/f2.jpg');
-    background-position: cover;
+    background-position: center;
     background-size: cover;
     align-items: center;
 }
@@ -189,7 +190,7 @@ h2 {
     grid-column: 2/3;
     grid-row: 1/3;
     background-image: url('../Images/f1.jpg');
-    background-position: cover;
+    background-position: center;
     background-size: cover;
 
 }
@@ -228,7 +229,7 @@ h2 {
     grid-column: 1/2;
     grid-row: 1/4;
     background-image: url('../Images/f3.jpg');
-    background-position: cover;
+    background-position: center;
     background-size: cover;
 }
 
@@ -261,4 +262,49 @@ h2 {
     background-position: cover;
     background-size: cover;
     align-items: center;
+}
+
+/*area 4*/
+
+.area4 {
+    display: grid;
+    grid-template-columns: 450px 1fr;
+    background-color: #e8e9ee;
+}
+
+.area4--content {
+    padding: 300px 80px;
+
+}
+
+.area4--text {
+    padding-top: 7%;
+    line-height: 25px;
+
+}
+
+.area4--img1 {
+    background-image: url('../Images/bg3.jpg');
+    background-position: left;
+}
+
+.area4--button {
+    padding-top: 7%;
+}
+
+/*img area 5*/
+
+.area5--img1 {
+    background-image: url('../Images/bg4.jpg');
+    background-position: cover;
+    background-size: cover;
+    align-items: center;
+    height: 650px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 80px;
+    text-align: center;
 }
